@@ -71,4 +71,5 @@ Events.RegisterEvent(defines.events.on_chunk_generated)
 Events.RegisterEvent(defines.events.on_built_entity)
 Events.RegisterEvent(defines.events.on_robot_built_entity)
 Events.RegisterEvent(defines.events.on_player_driving_changed_state)
+Events.RegisterEvent(defines.events.on_player_left_game)
 EventScheduler.RegisterScheduler()
